--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             height: 100vh;
             background-color: #f8f9fa;
         }
+
+#tableContainer {
+    max-height: 300px; /* Adjust height as needed */
+    overflow-y: auto;
+}
         .container {
             max-width: 600px;
             background: white;
