--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                 <input type="text" id="tower_type" class="form-control" readonly required>
             </div>
             <button type="button" class="btn btn-primary" onclick="addData()">Add Data</button>
-            <button type="button" class="btn btn-info" onclick="downloadJPG()">Download JPG</button>
+           <button type="button" class="btn btn-info" onclick="downloadPDF()">Download PDF</button>
+JPG</button>
         </form>
         <div id="tableContainer">
             <table class="table table-bordered">
