--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Create Beat Plan</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
         body {
             display: flex;
@@ -14,30 +15,21 @@
             height: 100vh;
             background-color: #f8f9fa;
         }
-
-#tableContainer {
-    max-height: 300px; /* Adjust height as needed */
-    overflow-y: auto;
-}
         .container {
-            max-width: 600px;
+            max-width: 700px;
             background: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+        #tableContainer {
+            max-height: 300px;
+            overflow-y: auto;
+        }
         @media print {
-          body * {
-            visibility: hidden;
-          }
-          .container, .container * {
-            visibility: visible;
-          }
-          .container {
-            position: absolute;
-            left: 0;
-            top: 0;
-          }
+            body * { visibility: hidden; }
+            .container, .container * { visibility: visible; }
+            .container { position: absolute; left: 0; top: 0; }
         }
     </style>
 </head>
@@ -54,7 +46,7 @@
             <div class="mb-3">
                 <label for="date" class="form-label">Date:</label>
                 <p style="color: red;">* Please change after 4 sites.</p>
-                        <input type="date" id="date" class="form-control" onchange="handleDateChange()" required>
+                <input type="date" id="date" class="form-control" onchange="handleDateChange()" required>
             </div>
             <div class="mb-3">
                 <label for="indus_id" class="form-label">Indus ID:</label>
@@ -69,8 +61,7 @@
                 <input type="text" id="tower_type" class="form-control" readonly required>
             </div>
             <button type="button" class="btn btn-primary" onclick="addData()">Add Data</button>
-           <button type="button" class="btn btn-info" onclick="downloadPDF()">Download PDF</button>
-JPG</button>
+            <button type="button" class="btn btn-info" onclick="downloadPDF()">Download PDF</button>
         </form>
         <div id="tableContainer">
             <table class="table table-bordered">
@@ -89,43 +80,96 @@ JPG</button>
             </table>
         </div>
     </div>
+
     <script>
         let dataRows = [];
         let entryCount = 0;
         let currentDate = document.getElementById("date").value;
 
         document.getElementById("date").valueAsDate = new Date();
+
         function lockFields() {
             document.getElementById("fo_name").setAttribute("disabled", "true");
             document.getElementById("lockBtn").classList.add("d-none");
             document.getElementById("unlockBtn").classList.remove("d-none");
         }
+
         function unlockFields() {
             document.getElementById("fo_name").removeAttribute("disabled");
             document.getElementById("lockBtn").classList.remove("d-none");
             document.getElementById("unlockBtn").classList.add("d-none");
         }
-        function resetEntryCount() {
-            entryCount = 0;
+
+        function handleDateChange() {
+            const newDate = document.getElementById("date").value;
+            if (newDate !== currentDate) {
+                entryCount = 0;
+                currentDate = newDate;
+                dataRows = [];
+                document.getElementById("dataTable").innerHTML = '';
+            }
         }
 
-       function handleDateChange() {
-    const newDate = document.getElementById("date").value;
-    if (newDate !== currentDate) {
-        entryCount = 0;
-        currentDate = newDate;
-        dataRows = [];
-        document.getElementById("dataTable").innerHTML = '';
-    }
-    
-    // Scroll to the last row in the table
-    const tableContainer = document.getElementById("tableContainer");
-    tableContainer.scrollTop = tableContainer.scrollHeight;
-}
+        function addData() {
+            if (entryCount >= 24) {
+                alert("You have reached the maximum limit of 24 entries.");
+                return;
+            }
+            let foName = document.getElementById('fo_name').value;
+            let date = document.getElementById('date').value;
+            let indusId = document.getElementById('indus_id').value;
+            let formattedIndusId = "IN-" + indusId;
+            let siteId = document.getElementById('site_id').value;
+            let towerType = document.getElementById('tower_type').value;
 
+            if (!foName || !date || !indusId || !siteId || !towerType) {
+                alert("Please fill all required fields before adding data.");
+                return;
+            }
+            if (towerType === "RTT") {
+                alert("RTT sites cannot be added.");
+                return;
+            }
+            if (dataRows.some(row => row[3] === formattedIndusId)) {
+                alert("Duplicate Formatted Indus ID is not allowed.");
+                return;
+            }
+            dataRows.push([entryCount + 1, foName, date, indusId, formattedIndusId, siteId, towerType]);
 
+            let tableBody = document.getElementById("dataTable");
+            let newRow = tableBody.insertRow();
+            newRow.insertCell(0).innerText = entryCount + 1;
+            newRow.insertCell(1).innerText = foName;
+            newRow.insertCell(2).innerText = date;
+            newRow.insertCell(3).innerText = indusId;
+            newRow.insertCell(4).innerText = formattedIndusId;
+            newRow.insertCell(5).innerText = siteId;
+            newRow.insertCell(6).innerText = towerType;
 
-        let siteData = {
+            entryCount++;
+            document.getElementById('indus_id').value = "";
+            document.getElementById('site_id').value = "";
+            document.getElementById('tower_type').value = "";
+        }
+
+        function downloadPDF() {
+            const { jsPDF } = window.jspdf;
+            const foName = document.getElementById("fo_name").value || "Beat_Plan";
+            const doc = new jsPDF();
+
+            html2canvas(document.getElementById('tableContainer')).then(function(canvas) {
+                const imgData = canvas.toDataURL("image/png");
+                const imgWidth = 190;  
+                const imgHeight = (canvas.height * imgWidth) / canvas.width;
+
+                doc.addImage(imgData, "PNG", 10, 10, imgWidth, imgHeight);
+                doc.save(`${foName}_beat_plan.pdf`);
+            });
+        }
+    </script>
+</body>
+</html>
+
             1023959: { site: "MOHADI1", type: "GBT" },
 1023960: { site: "Pawani (Vodafone)", type: "GBT" },
 1023961: { site: "BALLARPUR2", type: "GBT" },
